<resources>
    <string name="app_name">TheseWords</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="X">X</string>
    <string name="U">U</string>
    <string name="S">S</string>
    <string name="P">P</string>
    <string name="W">W</string>
    <string name="T">T</string>
    <string name="M">M</string>
    <string name="V">V</string>
    <string name="Z">Z</string>
    <string name="Y">Y</string>
    <string name="O">O</string>
    <string name="N">N</string>
    <string name="L">L</string>
    <string name="K">K</string>
    <string name="J">J</string>
    <string name="I">I</string>
    <string name="H">H</string>
    <string name="G">G</string>
    <string name="F">F</string>
    <string name="space">Space</string>
    <string name="clear">Clear</string>
    <string name="textview"></string>
    <string name="delete">Delete</string>
    <string name="repeat">Repeat</string>
    <string name="add">ADD</string>
    <string name="simple_ime">Simple IME</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="todo">TODO</string>
</resources>