<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/repeat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints">

                <Button
                    android:id="@+id/A"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/A"
                    app:layout_column="0"
                    app:layout_row="0"
                    tools:ignore="DuplicateClickableBoundsCheck" />

                <Button
                    android:id="@+id/B"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/B"
                    app:layout_column="1"
                    app:layout_row="0" />

                <Button
                    android:id="@+id/C"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/C"
                    app:layout_column="2"
                    app:layout_row="0" />

                <Button
                    android:id="@+id/D"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/D"
                    app:layout_column="3"
                    app:layout_row="0" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-7dp">

                <Button
                    android:id="@+id/E"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/E"
                    app:layout_column="0"
                    app:layout_row="0" />

                <Button
                    android:id="@+id/F"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/F"
                    app:layout_column="1"
                    app:layout_row="0" />

                <Button
                    android:id="@+id/G"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/G"
                    app:layout_column="2"
                    app:layout_row="0" />

                <Button
                    android:id="@+id/H"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/H"
                    app:layout_column="3"
                    app:layout_row="0" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-16dp">

                <Button
                    android:id="@+id/I"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/I"
                    app:layout_column="0"
                    app:layout_row="2" />

                <Button
                    android:id="@+id/J"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/J"
                    app:layout_column="1"
                    app:layout_row="2" />

                <Button
                    android:id="@+id/K"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/K"
                    app:layout_column="2"
                    app:layout_row="2" />

                <Button
                    android:id="@+id/L"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/L"
                    app:layout_column="3"
                    app:layout_row="2" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-11dp">

                <Button
                    android:id="@+id/M"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/M"
                    app:layout_column="0"
                    app:layout_row="3" />

                <Button
                    android:id="@+id/N"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/N"
                    app:layout_column="3"
                    app:layout_row="3" />
                <Button
                    android:id="@+id/O"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/O"
                    app:layout_column="3"
                    app:layout_row="3" />

                <Button
                    android:id="@+id/P"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/P"
                    app:layout_column="3"
                    app:layout_row="3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-8dp">

                <Button
                    android:id="@+id/Q"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Q"
                    app:layout_column="0"
                    app:layout_row="4" />

                <Button
                    android:id="@+id/R"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/R"
                    app:layout_column="1"
                    app:layout_row="4" />

                <Button
                    android:id="@+id/S"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/S"
                    app:layout_column="2"
                    app:layout_row="4" />

                <Button
                    android:id="@+id/T"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/T"
                    app:layout_column="3"
                    app:layout_row="4" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="2dp">

                <Button
                    android:id="@+id/U"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/U"
                    app:layout_column="0"
                    app:layout_row="5" />

                <Button
                    android:id="@+id/V"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/V"
                    app:layout_column="1"
                    app:layout_row="5" />

                <Button
                    android:id="@+id/W"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/W"
                    app:layout_column="2"
                    app:layout_row="5" />

                <Button
                    android:id="@+id/X"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/X"
                    app:layout_column="3"
                    app:layout_row="5" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/TextViewSpeech"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
                tools:layout_editor_absoluteX="-5dp">

                <Button
                    android:id="@+id/Y"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Y"
                    app:layout_column="2"
                    app:layout_row="3" />

                <Button
                    android:id="@+id/space"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/space"
                    app:layout_column="2"
                    app:layout_row="3" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    app:layout_column="2"
                    app:layout_row="3" />

                <Button
                    android:id="@+id/Z"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Z"
                    app:layout_column="1"
                    app:layout_row="3" />

            </LinearLayout>

            <TextView
                android:id="@+id/TextViewSpeech"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scrollbars = "vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/green_rectangle_black_border"
                android:padding="10dp"
                android:text="@string/textview"
                android:textColor="#fff"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

            <Button
                android:id="@+id/clear_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stop" />

            <Button
                android:id="@+id/repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/repeat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextViewSpeech" />

            <Button
                android:id="@+id/stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="Stop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repeat" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>